Updated Layout internationalization

--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -1,4 +1,9 @@
 {
   "start button": "Suche deinen Standort",
-  "share button": "Teilen"
+  "share button": "Teilen",
+  "menu home": "Start",
+  "menu locations": "Orte",
+  "menu settings": "Einstellungen",
+  "menu contact": "Kontakt",
+  "footer legal": "Rechtliches"
 }
