Added translations to the contact us

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -4,7 +4,7 @@
   "menu home": "Home",
   "menu locations": "Locations",
   "menu settings": "Settings",
-  "menu contact": "Contact",
+  "menu contact": "Contact Us",
   "footer legal": "Legal",
 
   "miles per hour": "Miles per hour",
