Added a contributor page and added some translations

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -6,6 +6,7 @@
   "menu settings": "Settings",
   "menu contact": "Contact Us",
   "footer legal": "Legal",
+  "footer contributors": "Contributors",
 
   "miles per hour": "Miles per hour",
   "kilometers per hour": "Kilometers per hour",
