--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -6,6 +6,7 @@
   "menu settings": "Einstellungen",
   "menu contact": "Kontakt",
   "footer legal": "Rechtliches",
+  "footer contributors": "Mitwirkende",
 
   "miles per hour": "Meilen pro Stunde",
   "kilometers per hour": "Kilometer pro Stunde",
