Improved the translations on the search page

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -8,6 +8,8 @@
   "footer legal": "Legal",
   "footer contributors": "Contributors",
 
+  "search page title": "Search - Weather.io",
+
   "miles per hour": "Miles per hour",
   "kilometers per hour": "Kilometers per hour",
   "knots": "Knots",
