--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -8,6 +8,8 @@
   "footer legal": "Rechtliches",
   "footer contributors": "Mitwirkende",
 
+  "search page title": "Suche - Weather.io",
+
   "miles per hour": "Meilen pro Stunde",
   "kilometers per hour": "Kilometer pro Stunde",
   "knots": "Knoten",
