--- a/public/locales/en/contact.json
+++ b/public/locales/en/contact.json
@@ -4,5 +4,10 @@
   "first name": "First name",
   "last name": "Last name",
   "email": "Email",
-  "message": "Message"
+  "message": "Message",
+
+  "sent toast": "Message sent!",
+  "invalid email": "Invalid email address",
+  "at least 2 characters": "This field must contain at least 2 characters",
+  "at least 10 characters": "This field must contain at least 10 characters"
 }
