--- a/public/locales/de/contact.json
+++ b/public/locales/de/contact.json
@@ -7,6 +7,8 @@
   "message": "Nachricht",
 
   "sent toast": "Nachricht gesendet",
+  "sending email loading toast": "Email wird gesendet...",
+
   "invalid email": "Ungültige Email",
   "at least 2 characters": "Dieses Feld muss mindestens 2 Zeichen enthalten",
   "at least 10 characters": "Dieses Feld muss mindestens 10 Zeichen enthalten"
