--- a/public/locales/de/home.json
+++ b/public/locales/de/home.json
@@ -41,5 +41,15 @@
 
   "now": "Jetzt",
   "early hour time ending": ":00",
-  "late hour time ending": ":00"
+  "late hour time ending": ":00",
+
+  "9 day forecast card content": "Die Vorhersage für die nächsten 9 Tage. <br />Die <span class=\"font-semibold\">Temperaturen</span> sind die durchschnittlichen Temperaturen des Tages. Eine für den Tag, eine für die Nacht.",
+
+  "precipitation card title": "Derzeitige Niederschlagswahrscheinlichkeit",
+
+  "feels like card content": "Die gefühlte Temperatur ist die Temperatur, die du spürst, wenn du draußen bist.<br /> Sie wird durch die Temperatur, die Luftfeuchtigkeit und den Wind beeinflusst.",
+
+  "visibility card title": "Derzeitige Sichtweite",
+
+  "wind pressure card title": "Derzeitiger Wind"
 }
