Updated the responsiveness on the locationsettings page

--- a/public/locales/de/locationsettings.json
+++ b/public/locales/de/locationsettings.json
@@ -1,5 +1,5 @@
 {
-  "add new location": "Füge einen neuen Ort hinzu",
+  "add new location": "Füge einen Ort hinzu",
   "add new location button": "Hinzufügen",
   "search input placeholder": "Suche deinen Standort",
 
