Added the translation of my city on the /home page

--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -14,5 +14,7 @@
   "kilometers per hour": "Kilometer pro Stunde",
   "knots": "Knoten",
   "meters per second": "Meter pro Sekunde",
-  "beaufort": "Beaufort"
+  "beaufort": "Beaufort",
+
+  "my city": "Meine Stadt"
 }
