--- a/public/locales/de/locationsettings.json
+++ b/public/locales/de/locationsettings.json
@@ -8,6 +8,5 @@
   "added city toast": "Neue Stadt hinzugefügt!",
   "city not found toast": "Stadt nicht gefunden!",
 
-  "my city button": "Meine Stadt auswählen",
-  "my city": "Meine Stadt"
+  "my city button": "Meine Stadt auswählen"
 }
