--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -14,5 +14,7 @@
   "kilometers per hour": "Kilometers per hour",
   "knots": "Knots",
   "meters per second": "Meters per second",
-  "beaufort": "Beaufort"
+  "beaufort": "Beaufort",
+
+  "my city": "My city"
 }
