--- a/public/locales/en/locationsettings.json
+++ b/public/locales/en/locationsettings.json
@@ -8,6 +8,5 @@
   "added city toast": "Added new city!",
   "city not found toast": "City not found!",
 
-  "my city button": "Choose my city",
-  "my city": "My city"
+  "my city button": "Choose my city"
 }
