--- a/public/locales/de/locationsettings.json
+++ b/public/locales/de/locationsettings.json
@@ -7,6 +7,7 @@
   "switched to city toast": "Stadt gewechselt!",
   "added city toast": "Neue Stadt hinzugefügt!",
   "city not found toast": "Stadt nicht gefunden!",
+  "try again toast": "Versuche es erneut!",
 
   "my city button": "Meine Stadt auswählen"
 }
