--- a/public/locales/en/locationsettings.json
+++ b/public/locales/en/locationsettings.json
@@ -7,6 +7,7 @@
   "switched to city toast": "Switched to city!",
   "added city toast": "Added new city!",
   "city not found toast": "City not found!",
+  "try again toast": "Try again!",
 
   "my city button": "Choose my city"
 }
