--- a/public/locales/de/home.json
+++ b/public/locales/de/home.json
@@ -39,7 +39,7 @@
   "weather state windy": "Windig",
   "weather state sunny": "Sonnig",
 
-  "now": "Jetzt",
+  "this hour": "Diese Stunde",
   "early hour time ending": ":00",
   "late hour time ending": ":00",
 
