--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -39,7 +39,7 @@
   "weather state windy": "Windy",
   "weather state sunny": "Sunny",
 
-  "now": "Now",
+  "this hour": "This Hour",
   "early hour time ending": "AM",
   "late hour time ending": "PM",
 
