feat: Added the basic functionality of the share button

--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -16,5 +16,7 @@
   "meters per second": "Meter pro Sekunde",
   "beaufort": "Beaufort",
 
-  "my city": "Meine Stadt"
+  "my city": "Meine Stadt",
+
+  "share text": "Checke doch mal diese Seite aus: "
 }
