--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -16,5 +16,7 @@
   "meters per second": "Meters per second",
   "beaufort": "Beaufort",
 
-  "my city": "My city"
+  "my city": "My city",
+
+  "share text": "Check out this page: "
 }
