Added more internationalization aspects and improved the general code health

--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -1,4 +1,7 @@
 {
+  "title": "Weather.io",
+  "location": "Deutschland",
+
   "start button": "Suche deinen Standort",
   "share button": "Teilen",
   "menu home": "Start",
