--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,4 +1,7 @@
 {
+  "title": "Weather.io",
+  "location": "Global",
+
   "start button": "Find your location",
   "share button": "Share",
   "menu home": "Home",
