Added a fix if the precipitation probability is not available

--- a/public/locales/de/home.json
+++ b/public/locales/de/home.json
@@ -51,5 +51,7 @@
 
   "visibility card title": "Derzeitige Sichtweite",
 
-  "wind pressure card title": "Derzeitiger Wind"
+  "wind pressure card title": "Derzeitiger Wind",
+
+  "not available": "Nicht verfügbar"
 }
