--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -51,5 +51,7 @@
 
   "visibility card title": "Current Visibility",
 
-  "wind pressure card title": "Current Wind & Pressure"
+  "wind pressure card title": "Current Wind & Pressure",
+
+  "not available": "Not available"
 }
