feat: Added a costum 404 page

--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -21,5 +21,7 @@
 
   "my city": "Meine Stadt",
 
-  "share text": "Checke doch mal diese Seite aus: "
+  "share text": "Checke doch mal diese Seite aus: ",
+
+  "title 404 page": "404: Seite nicht gefunden"
 }
