--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -21,5 +21,7 @@
 
   "my city": "My city",
 
-  "share text": "Check out this page: "
+  "share text": "Check out this page: ",
+
+  "title 404 page": "404: This page could not be found"
 }
