feat: Added an offline page as a fallback

--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -23,5 +23,6 @@
 
   "share text": "Checke doch mal diese Seite aus: ",
 
-  "title 404 page": "404: Seite nicht gefunden"
+  "title 404 page": "404: Seite nicht gefunden",
+  "title offline page": "Offline"
 }
