--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -23,5 +23,6 @@
 
   "share text": "Check out this page: ",
 
-  "title 404 page": "404: This page could not be found"
+  "title 404 page": "404: This page could not be found",
+  "title offline page": "Offline"
 }
