--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -8,6 +8,7 @@
   "air quality": "Air Quality",
   "pressure": "Pressure",
   "speed": "Speed",
+  "moon phase": "Moon Phase",
 
   "early morning": "Early Morning",
   "morning": "Morning",
@@ -53,5 +54,16 @@
 
   "wind pressure card title": "Current Wind & Pressure",
 
-  "not available": "Not available"
+  "not available": "Not available",
+
+  "moon phase card title": "Current Moon Phase",
+  "moon phase card content": "The moon phase is the shape of the directly sunlit portion of the Moon as viewed from Earth.",
+
+  "moon phase new moon": "New Moon",
+  "moon phase waxing crescent": "Waxing Crescent",
+  "moon phase first quarter": "First Quarter",
+  "moon phase waxing gibbous": "Waxing Gibbous",
+  "moon phase full moon": "Full Moon",
+    "moon phase waning gibbous": "Waning Gibbous",
+    "moon phase last quarter": "Last Quarter"
 }
