refactor: Improved the UX of the "choose my location" feature

--- a/public/locales/de/locationsettings.json
+++ b/public/locales/de/locationsettings.json
@@ -9,5 +9,5 @@
   "city not found toast": "Stadt nicht gefunden!",
   "try again toast": "Versuche es erneut!",
 
-  "my city button": "Meine Stadt auswählen"
+  "my location button": "Meinen Standort auswählen"
 }
