--- a/public/locales/en/locationsettings.json
+++ b/public/locales/en/locationsettings.json
@@ -9,5 +9,5 @@
   "city not found toast": "City not found!",
   "try again toast": "Try again!",
 
-  "my city button": "Choose my city"
+  "my location button": "Choose my location"
 }
