fix: Fixed a bug for the moon phase

--- a/apps/web/public/locales/de/home.json
+++ b/apps/web/public/locales/de/home.json
@@ -66,6 +66,7 @@
   "moon phase full moon": "Vollmond",
   "moon phase waning gibbous": "Abnehmender Mond",
   "moon phase last quarter": "Letztes Viertel",
+  "moon phase waning crescent": "Abnehmende Sichel",
 
   "more information": "Mehr Informationen",
   "sun hours": "Sonnenstunden"
