--- a/apps/web/public/locales/en/home.json
+++ b/apps/web/public/locales/en/home.json
@@ -66,6 +66,7 @@
   "moon phase full moon": "Full Moon",
   "moon phase waning gibbous": "Waning Gibbous",
   "moon phase last quarter": "Last Quarter",
+  "moon phase waning crescent": "Waning Crescent",
 
   "more information": "More Information",
   "sun hours": "Sun Hours"
