feat: Added a feature which shows you open weather warnings and updated the docs

--- a/apps/web/public/locales/de/home.json
+++ b/apps/web/public/locales/de/home.json
@@ -69,5 +69,9 @@
   "moon phase waning crescent": "Abnehmende Sichel",
 
   "more information": "Mehr Informationen",
-  "sun hours": "Sonnenstunden"
+  "less information": "Weniger Informationen",
+
+  "sun hours": "Sonnenstunden",
+
+  "from": "Von"
 }
