--- a/apps/web/public/locales/en/home.json
+++ b/apps/web/public/locales/en/home.json
@@ -69,5 +69,9 @@
   "moon phase waning crescent": "Waning Crescent",
 
   "more information": "More Information",
-  "sun hours": "Sun Hours"
+  "less information": "Less Information",
+
+  "sun hours": "Sun Hours",
+
+  "from": "From"
 }
