feat: Added a bottom menubar for mobile

--- a/apps/web/public/locales/en/common.json
+++ b/apps/web/public/locales/en/common.json
@@ -7,7 +7,7 @@
   "menu home": "Home",
   "menu locations": "Locations",
   "menu settings": "Settings",
-  "menu contact": "Contact Us",
+  "menu contact": "Contact",
   "footer legal": "Legal",
   "footer contributors": "Contributors",
 
