feat: Added moonrise and moonset times

--- a/apps/web/public/locales/de/home.json
+++ b/apps/web/public/locales/de/home.json
@@ -32,6 +32,9 @@
   "sunset": "Sonnenuntergang",
   "sunrise": "Sonnenaufgang",
 
+  "moonset": "Monduntergang",
+  "moonrise": "Mondaufgang",
+
   "weather state stormy": "Stürmisch",
   "weather state snowy": "Schnee",
   "weather state rainy": "Regen",
