fix(translations): Fixed a problem related to the feels like translations and refactored the code for the logic of the feels like phrases

--- a/apps/web/public/locales/de/home.json
+++ b/apps/web/public/locales/de/home.json
@@ -23,7 +23,7 @@
   "feels like phrase slightly warm": "Perfekte Temeperatur für ein Picknick!",
   "feels like phrase neutral": "Perfektes Wetter für einen Spaziergang!",
   "feels like phrase slightly cold": "Eine leichte Jacke könnte erforderlich sein.",
-  "feels like phrase slightly moor cold": "Es ist ein eisiger Tag!",
+  "feels like phrase slightly more cold": "Es ist ein eisiger Tag!",
   "feels like phrase cold": "Sogar Pinguine bestellen sich eine heiße Schokolade!",
   "feels like phrase very cold": "Auch die Schneemänner frieren!",
   "feels like phrase extremely cold": "Es ist so kalt, dass sogar die Eisbären im Haus bleiben!",
