--- a/apps/web/public/locales/en/home.json
+++ b/apps/web/public/locales/en/home.json
@@ -23,7 +23,7 @@
   "feels like phrase slightly warm": "A perfect day for a picnic!",
   "feels like phrase neutral": "Just the right temperature, not too hot, not too cold.",
   "feels like phrase slightly cold": "A light jacket might be needed.",
-  "feels like phrase slightly moor cold": "It's a frosty day!",
+  "feels like phrase slightly more cold": "It's a frosty day!",
   "feels like phrase cold": "Penguins are ordering hot chocolate due to the chill!",
   "feels like phrase very cold": "Today's frosty weather is making even snowmen shiver!",
   "feels like phrase extremely cold": "It's so cold, even the polar bears are staying inside!",
