feat: Added a translation for Hectopascal and added a description of the wind pressure

--- a/apps/web/public/locales/de/common.json
+++ b/apps/web/public/locales/de/common.json
@@ -18,6 +18,7 @@
   "knots": "Knoten",
   "meters per second": "Meter pro Sekunde",
   "beaufort": "Beaufort",
+  "hectopascals": "Hektopascal",
 
   "share text": "Checke doch mal diese Seite aus: ",
 
