--- a/apps/web/public/locales/de/home.json
+++ b/apps/web/public/locales/de/home.json
@@ -62,6 +62,7 @@
   "visibility card title": "Derzeitige Sichtweite",
 
   "wind pressure card title": "Derzeitiger Wind",
+  "wind pressure card content": "<b>Atmosphärischer Druck auf dem Meeresspiegel.</b> <br /> Auf Meereshöhe ist der atmosphärische Druck die Kraft, die durch das Gewicht der darüber befindlichen Luft ausgeübt wird und im Durchschnitt bei 1013,25 hPa liegt.",
 
   "not available": "Nicht verfügbar",
 
