--- a/apps/web/public/locales/en/common.json
+++ b/apps/web/public/locales/en/common.json
@@ -18,6 +18,7 @@
   "knots": "Knots",
   "meters per second": "Meters per second",
   "beaufort": "Beaufort",
+  "hectopascals": "Hectopascals",
 
   "share text": "Check out this page: ",
 
